# icarus_pc

./: CMakeLists.txt  GIT_Instructions.txt  README.md  package.xml
launch/: xtion+icarus_pc.launch  xtion+icarus_pc.launch~  xtion+rgbdslam.launch~  xtionsender.cpp~
msg/: Attitude.msg  DataToFC.msg  GPS.msg  Position.msg
net/: CMakeLists.txt
net/launch/: slow_computer2.launch
net/msg/: DataFromFC.msg  DataToFCGPS.msg
net/nodes/: createtrainingimages.py  createtrainingimages.py~  primarycontroller.py  results.csv  sampleprogram.py
nodes/: OpenNI2Grabber.h  primarycontroller.py  primarycontroller.py~  trainnets.py~  xtionsender.cpp
scripts/: listener.py  listener.py~
src/: crap.cpp  createtrainingimages.py  icarus_helper.py  listener.cpp  results.csv  trainnets.py
src/backups/: listener1.py  listener2.py  primarycontroller1.py
